fixed empty folder issue and z-index

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header {
 }
 
 #navbar>div {
-    z-index: 100;
+    z-index: 300;
 }
 
 #navbar a {
@@ -106,7 +106,7 @@ header {
     background-color: var(--dropdown);   
     min-width: 160px;
     /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
-    z-index: 150;
+    z-index: 999;
 
 }
     /* font-size: medium !important; */
